--- a/index.html
+++ b/index.html
@@ -120,8 +120,11 @@
     <div class="banner">
         <div class="container container1">
             <img src="img/shop1.jpg" alt="" class="lunbo_img">
+            <img src="img/shop1.jpg" alt="" class="lunbo_img">
             <img src="img/shop2.jpg_.webp" alt="" class="lunbo_img">
+            <img src="img/shop1.jpg" alt="" class="lunbo_img">
             <img src="img/shop3.jpg_.webp" alt="" class="lunbo_img">
+            <img src="img/shop2.jpg_.webp" alt="" class="lunbo_img">
             <div class="logo">
                 <img src="img/logo.png" alt="" class="logoimg">
             </div>
